compiler/testData/compileKotlinAgainstCustomBinaries/internalFromForeignModuleJs/output.txt
compiler/testData/compileKotlinAgainstCustomBinaries/internalFromForeignModuleJs/source.kt:3:21: error: cannot access 'InternalInterface': it is internal in 'a'
private fun test(i: InternalInterface): InternalTypealias {
                    ^^^^^^^^^^^^^^^^^
compiler/testData/compileKotlinAgainstCustomBinaries/internalFromForeignModuleJs/source.kt:3:41: error: cannot access 'InternalTypealias': it is internal in 'a'
private fun test(i: InternalInterface): InternalTypealias {
                                        ^^^^^^^^^^^^^^^^^
compiler/testData/compileKotlinAgainstCustomBinaries/internalFromForeignModuleJs/source.kt:4:19: error: cannot access 'internalMemberFun': it is internal in 'PublicClass'
    PublicClass().internalMemberFun()
                  ^^^^^^^^^^^^^^^^^
compiler/testData/compileKotlinAgainstCustomBinaries/internalFromForeignModuleJs/source.kt:5:17: error: cannot access 'Companion': it is internal in 'PublicClass'
    PublicClass.Companion
                ^^^^^^^^^
compiler/testData/compileKotlinAgainstCustomBinaries/internalFromForeignModuleJs/source.kt:7:5: error: cannot access 'internalFun': it is internal in 'a'
    internalFun(internalVal)
    ^^^^^^^^^^^
compiler/testData/compileKotlinAgainstCustomBinaries/internalFromForeignModuleJs/source.kt:7:17: error: cannot access 'internalVal': it is internal in 'a'
    internalFun(internalVal)
                ^^^^^^^^^^^
COMPILATION_ERROR
